Measure a cached window query with and without the map group
The window map fusion benchmark grows case 11 of its acceptance plan: the same
shapes on CachedWindowRecordCursorFactory and CachedWindowLightRecordCursorFactory,
where the rows reach a function through a materialized record chain rather than
off the base cursor.

--cursor picks the factory and the arm asserts the query landed on it rather than
assuming it, reading the group lists through CachedWindowMapGroups where they are
a cached factory's. A cumulative shape does not reach a cached cursor by itself,
so --cached-bucket says how a run forces it: a residual whole-partition call,
which leaves the group in the scan that fills the chain, or a sort the base
cursor does not produce, which gives it a bucket of its own and keeps the SELECT
list identical to the streaming one.

Two shapes are new. partition-sum-avg-count is sum + avg + count over
(partition by k) - three whole-partition two-pass functions, three maps and six
probes a row - and partition-avg is its avg alone, which is the one map and two
probes a fused group would leave. Neither can fuse today, so both arms of them
run the same code; what they measure is what a shared component stands to remove.

Measured over 2e6 rows on an INT key at the limit a server defaults to, fusing
sum + avg + count is 2.1x faster at 1e6 keys on both cached factories, against
2.5x streaming, with 65 MiB less retained native memory. The whole-partition
trio runs at 565-630 ns/row against 163-170 for one map and two probes.

An unfused two-pass function now contributes two structural lookups a row rather
than one, which is what pass 1 and pass 2 each cost it.